SONAR-13426 accept tokens on api/project_badges/measure and quality_gate endpoints, including with force auth enabled